Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15440

Memory leak in discovery

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      Unlikely to be hit in real world, but there's a potential memory leak in lnet_peer_data_present. If the ping buffer has nnis <= 1 then function is exited without dropping the ref on the ping buffer causing this memory to leak:

              if (pbuf->pb_info.pi_nnis <= 1)
                      goto out;
      

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: